<resources>
    <string name="app_name">Consejera WiFi</string>
    <string name="start_test">Nueva medición</string>
    <string name="results">Resultados Previos</string>
    <string name="basic_measurement">Medición básica</string>
    <string name="basic_measurement_description">Revision de los protocolos de seguridad inalámbrica y del dns</string>
    <string name="speed_measurement_description">Velocidad comparativa</string>
    <string name="speed_measurement">Medición de la Velocidad</string>
    <string name="devices">Otros dispositivos</string>
    <string name="devices_description">Búsqueda de los dispositivos que están conectados en mi red</string>
    <string name="blocking">Bloqueo de sitios web</string>
    <string name="blocking_description">Revisión del bloqueo de algún sitio web</string>
    <string name="title_home">Inicio</string>
    <string name="title_results">Resultados</string>
    <string name="title_settings">Config.</string>
    <string name="starting_test">Iniciando medición</string>
    <string name="error_server">Ocurrió un error en el servidor, intenta más tarde</string>
    <string name="title_dialog">Enlace del sitio web que quieres probar</string>
    <string name="cancel">Cancelar</string>
    <string name="run_test">Iniciar la prueba</string>
    <string name="url_devices_test">tests/devices</string>
    <string name="url_protocol_test">tests/protocol</string>
    <string name="url_dns_test">tests/dns</string>
    <string name="url_ooni_web_test">tests/ooni/web</string>
    <string name="url_ndt_ooni_test">tests/ooni/ndt</string>
    <string name="url_test_results">"tests/?type_test="</string>
    <string name="explanation_for_ooni_web_tcp_ip_result">La respuesta DNS obtenida es consistente, pero la conexión a alguna de las IPS de la página ha fallado. Por lo anterior, puede que este sitio esté siendo bloqueado.</string>
    <string name="explanation_for_ooni_web_http_diff_result">La página que te muestra tu servidor difiere de la que nos muestra a nosostros, puede que este sitio esté siendo bloqueado.</string>
    <string name="explanation_for_ooni_web_http_failure_result">La página no responde, puede que este sitio esté siendo bloqueado.</string>
    <string name="explanation_for_ooni_web_dns_result">La respuesta DNS obtenida no es consistente, puede que el sitio esté bloqueado</string>
    <string name="explanation_for_ooni_web_not_blocking_result">Sitio no bloqueado</string>
    <string name="explanation_for_ooni_web_site_not_found_result">Sitio no encontrado, revisa que la URL sea correcta</string>
    <string name="measurement_not_performed">Medición no realizada, intente más tarde</string>
    <string name="site_not_blocked">Sitio no bloqueado</string>
    <string name="site_blocking">Sitio probablemente bloqueado</string>
    <string name="protocol_result_wpa2_not_support">El punto de acceso wifi al que estás conectado no soporta WPA2</string>
    <string name="protocol_result_wpa2_support">El punto de acceso wifi al que estás conectado soporta WPA2</string>
    <string name="protocol_result_wpa_but_not_cipher">El punto de acceso wifi al que estás conectado soporta WPA2, pero está mal configurado, ya que no posee un algoritmo de cifrado</string>
    <string name="title_ndt_result">Velocidad comparativa</string>
    <string name="download_speed_better">La velocidad de descarga de tu internet es mejor que la del %1$d%% de las mediciones.</string>
    <string name="download_speed_worse">La velocidad de descarga de tu internet es peor que la del %1$d%% de las mediciones.</string>
    <string name="upload_speed_better">La velocidad de subida de tu internet es mejor que la del %1$d%% de las mediciones.</string>
    <string name="upload_speed_worse">La velocidad de subida de tu internet es peor que la del %1$d%% de las mediciones.</string>
    <string name="ping_better">Tu ping es mejor que el del %1$d%% de las mediciones.</string>
    <string name="ping_worse">Tu ping es peor que el del %1$d%% de las mediciones.</string>
    <string name="dns_tests">Pruebas de DNS</string>
    <string name="protocol_tests">Pruebas del Protocolo de Seguridad de la red Inalámbrica</string>
    <string name="username">username</string>
    <string name="place_measurement">place_measurement</string>
    <string name="clcert_page">https://www.clcert.cl</string>
    <string name="save_data">Datos guardados, el nombre de usuario es %1$s y la ubicación es %2$s</string>
    <string name="correct_dns_configuration">DNS correctamente configurado</string>
    <string name="incorrect_dns_configuration">DNS incorrectamente configurado. Tu DNS primario y secundario deben ser diferentes</string>
    <string name="dnssec_support">El servidor DNS que tienes configurado soporta DNSSEC</string>
    <string name="dnssce_not_support">El servidor DNS que tienes configurado no soporta DNSSEC</string>
    <string name="source_port_randomness_incorrect">La aleatoriedad del puerto de origen de tu servidor DNS no es adecuada, lo que lo deja expuesto a ataques de envenenamiento de caché DNS</string>
    <string name="source_port_randomness_correct">La aleatoriedad del puerto de origen de tu servidor DNS es adecuada</string>
    <string name="transaction_id_randomness_correct">La aleatoriedad del id de transacción de tu servidor DNS es adecuada</string>
    <string name="transaction_id_randomness_incorrect">La aleatoriedad del id de transacción de tu servidor DNS no es adecuada, lo que lo deja expuesto a ataques de envenenamiento de caché DNS</string>
    <string name="home">Hogar</string>
    <string name="public_transport">Transporte público</string>
    <string name="workplace">Lugar de trabajo o estudio</string>
    <string name="public_place">Lugar público</string>
    <string name="other">Otro</string>
</resources>