<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical"
    tools:context=".main_tabs.settings.SettingsFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/who_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="¿Cuál es tu nombre de usuario?"
                android:textAlignment="center"
                android:textSize="20sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:hint="Nombre"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/where_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:text="¿Desde dónde estás realizando la medición?"
                android:textAlignment="center"
                android:textSize="20sp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                android:id="@+id/places"
                >

                <RadioButton
                    android:id="@+id/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home" />

                <RadioButton
                    android:id="@+id/public_transport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_transport" />

                <RadioButton
                    android:id="@+id/work_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workplace" />

                <RadioButton
                    android:id="@+id/public_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_place" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />
            </RadioGroup>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Guardar" />
        </LinearLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>
