<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_tabs.home.HomeFragment">

    <!--android:layout_width="match_parent"
        android:layout_height="match_parent">-->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E0F2F1"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/card_basic_measurement"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#3F51B5"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/basic_measurement"
                        android:src="@drawable/ic_baseline_wifi_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#3F51B5"
                        android:orientation="vertical"
                        android:padding="8dp"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/basic_measurement"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:minLines="2"
                            android:text="@string/basic_measurement_description"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/card_speed_measurement"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2196F3"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/speed_measurement"
                        android:src="@drawable/ic_baseline_speed_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speed_measurement"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:minLines="2"
                            android:text="@string/speed_measurement_description"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="#FFFFFF"
                            />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/card_others_devices"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#03A9F4"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/devices"
                        android:src="@drawable/ic_baseline_router_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/devices"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="#FFFFFF"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:minLines="2"
                            android:text="@string/devices_description"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="#FFFFFF"
                            />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/card_blocking_test"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00BCD4"
                    android:orientation="horizontal"
                    android:padding="16dp"

                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/blocking"
                        android:src="@drawable/ic_baseline_app_blocking_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/blocking"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="#FFFFFF"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:minLines="2"
                            android:text="@string/blocking_description"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="#FFFFFF"
                            />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>